tests/errors/sendNotSend.milo
// @error: type does not implement Send

from "std/thread" import { spawn, threadJoin }

struct Dangerous {
    _ptr: *u8,
}

fn main(): i32 {
    unsafe {
        let d = Dangerous { _ptr: 0 as *u8 }
        let _t = spawn(move (): void => {
            let _x = d._ptr
        })!
    }
    return 0
}
